--- a/web/src/App.css
+++ b/web/src/App.css
@@ -43,7 +43,8 @@
 
 .send {
     margin: 10px;
-    padding: 2px;
+    padding: 3px;
+    text-align: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
